[project]
name = "ezq"
version = "0.1.0"
description = "An opinionated queue and event system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "async-lru>=2.0.4",
    "attrs>=25.1.0",
    "tembo-pgmq-python[async]>=0.9.2",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4"]

[tool.mypy]
files = ["src/ezq", "_main.py"]
